# obsidian-agents

./: .gitignore  AGENTS.md  Makefile  README.md  USAGE.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: RUNBOOK_HOWTO.md  codex-workflow.md  codex_context_management.md  codex_workflow_full.md  codex_workflow_operator.md  meeting_transcript_automation.md
docs/instruction-templates/: codex-user-AGENTS.md  codex-user-DEPENDENCY_POLICY.md  codex-user-ENGINEERING_GUIDE.md
docs/superpowers/plans/: 2026-05-07-meeting-ingestion-fallback.md  2026-05-11-live-meeting-validation.md  2026-05-11-output-folder-retention.md  2026-05-13-local-transcript-fallbacks.md  2026-05-14-action-template-tasks-query.md  2026-05-18-entra-device-code-auth.md  (+7 more)
prompts/: friday_weekly_wrap_prompt.md  monday_weekly_briefing_prompt.md
scripts/: check.sh  check_launch_agents.sh  generate_weekly_summary.py  process_intake.py  render_launchd_plists.py  run_automation_command.sh  run_intake_watcher.sh  run_meeting_sync.sh  run_web_clipper_server.sh  run_weekly_briefing.sh  run_weekly_wrap.sh  smoke_cli.py  watch_intake.py  write_automation_failure_note.py
src/obsidian_intake_agent/: __init__.py  automation.py  automation_failures.py  config.py  graph_auth.py  main.py  output_retention.py  watcher.py  weekly.py
src/obsidian_intake_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  helpers.py  test_action_renderer.py  test_automation.py  test_automation_failures.py  test_codex_cli.py  test_codex_extractor.py  test_config.py  test_dates.py  test_fs.py  test_git.py  test_graph_auth.py  test_intake_state.py  test_main.py  test_meeting_metadata.py  test_meeting_process_bundles.py  test_meeting_sync.py  test_meeting_sync_launch_wrapper.py  test_output_retention.py  test_processor.py  test_processor_intake.py  test_prompts.py  test_render_launchd_plists.py  test_renderer.py  test_transcript_provenance.py  test_vtt_extractor.py  test_watcher.py  test_web_clip_capture_server.py  test_web_clip_processor.py  test_web_clip_renderer.py  test_web_clip_retrieval.py  test_web_clipper_launch_wrapper.py  test_weekly.py  test_write_automation_failure_note_script.py
z-archive/: OLD-codex-workflow.md
(+46 files in other folders)
