[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian_intake_agent"
version = "0.1.0"
description = "Obsidian intake processing agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml",
  "watchdog",
  "python-docx",
  "webvtt-py",
]

[project.optional-dependencies]
audit = [
  "pip-audit>=2.9,<3",
]
dev = [
  "mypy>=1.19,<2",
  "ruff>=0.14,<1",
]

[project.scripts]
obsidian-agent = "obsidian_intake_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
